namespace MarsRover.Models.Instructions.Elementals;

public enum SingularInstruction
{
    TurnLeft,
    TurnRight,
    MoveForward
}
