@startuml "Mars Rover Challenge"
skinparam classAttributeIconSize 0

interface IInstructionReader <<interface>>
{
  + IsValidInstruction(instruction : string) : bool
  + EvaluateInstruction(instruction : string) : List<SingularInstruction>
}

enum SingularInstruction
{
  TurnLeft
  TurnRight
  MoveForward
}

class StandardInstructionReader
{
  + IsValidInstruction(instruction : string) : bool
  + EvaluateInstruction(instruction : string) : List<SingularInstruction>
}

abstract PlateauBase <<abstract>>
{
  - obstacleCoordinates : List<Coordinates>

  + GetObstacleCoordinates() : List<Coordinates>
  + AddObstacle(obstacleCoordinate: Coordinates)
  + RemoveObstacle(obstacleCoordinate: Coordinates)
  {abstract} + IsCoordinateValidInPlateau(coordinates : Coordinates) : bool
}

class RectangularPlateau
{
  + plateauSize : Coordinates

  + RectangularPlateau(plateauSize : Coordinates)

  + IsCoordinateValidInPlateau(coordinates : Coordinates) : bool
}

class Coordinates
{
  + x : int
  + y : int
}

class Direction
{
  - directions : List< &#40;string, Coordinates&#41; >
  - directionIndex : int

  + GetName() : string
  + GetMovementVector() : Coordinates
  + TurnLeft() : void
  + TurnRight() : void
}

interface IPositionStringConverter <<interface>>
{
  + IsValidPositionString(position : string) : bool
  + IsValidCoordinateString(coordinateString : string) : bool

  + ToCoordinatesDirection(position : string) : (Coordinates, Direction)
  + ToCoordinates(coordinateString : string) : Coordinates

  + ToPositionString(coordinates : Coordinates, direction : Direction) : string
}

class PositionStringConverter
{
  + IsValidPositionString(position : string) : bool
  + IsValidCoordinateString(coordinateString : string) : bool

  + ToCoordinatesDirection(position : string) : (Coordinates, Direction)
  + ToCoordinates(coordinateString : string) : Coordinates

  + ToPositionString(coordinates : Coordinates, direction : Direction) : string
}

abstract VehicleBase <<abstract>>
{
  - coordinates : Coordinates
  - direction : Direction
  - plateau : PlateauBase

  + VehicleBase(initialCoordinates : Coordinates, initialDirection : Direction, plateau : PlateauBase)

  + GetCoordinates() : Coordinates
  + GetDirection() : Direction
  + GetPlateau() : PlateauBase
  + ApplyMoveInstruction(instruction : List<SingularInstruction>) : void
  + TeleportToPosition(coordinates : Coordinates, direction : Direction) : void
}

class Rover
{
  + Rover(initialCoordinates : Coordinates, initialDirection : Direction)

  + TakePhotoAndSendToStation() : void
  + CollectSample() : void
}

class CommandHandler
{
  - instructionReader : IInstructionReader
  - positionStringConverter : IPositionStringConverter
  - vehicle : VehicleBase

  + CommandHandler(instructionReader : IInstructionReader, positionStringConverter : IPositionStringConverter)
  
  + ConnectVehicle(vehicle : VehicleBase)
  + DisconnectVehicle()

  + RequestPosition() : string
  + SendMoveInstruction(instruction : string) : (bool, string)
}

CommandHandler o-- IInstructionReader
CommandHandler o-- IPositionStringConverter
CommandHandler o-- VehicleBase

IInstructionReader --> SingularInstruction
IInstructionReader <|.. StandardInstructionReader 

VehicleBase <|-u- Rover
VehicleBase --> SingularInstruction
VehicleBase o--- Direction
VehicleBase o---- Coordinates
VehicleBase o-- PlateauBase

IPositionStringConverter <|.. PositionStringConverter
IPositionStringConverter ---> Direction
IPositionStringConverter ---> Coordinates

PlateauBase <|-- RectangularPlateau
PlateauBase -----> Coordinates

Direction --> Coordinates 

@enduml